# private-assistant-switch-skill-py

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Containerfile  Dockerfile  README.md  mypy.ini  pyproject.toml  pytest.toml  template.yaml
.devcontainer/: Containerfile  compose.yml  devcontainer.json
.devcontainer/config/: mosquitto.conf
.github/workflows/: container-build-pr.yml  container-build-push.yml  docker-build-action.yml  python_code_quality.yml  release-please.yml
docs/: main.md
integration/: __init__.py  test_integration.py
src/private_assistant_switch_skill/: __init__.py  config.py  exceptions.py  main.py  models.py  switch_skill.py
src/private_assistant_switch_skill/templates/: __init__.py  brightness.j2  help.j2  list.j2  refresh.j2  room_state.j2  state.j2
tests/: test_config.py  test_integration.py  test_models.py  test_switch_skill.py  test_templates.py
tests/data/: config.yaml
